--- a/roles/home.docker-registry/templates/config.j2
+++ b/roles/home.docker-registry/templates/config.j2
@@ -1,4 +1,5 @@
 version: 0.1
+
 log:
   fields:
     service: registry
@@ -21,3 +22,15 @@ http:
     Access-Control-Max-Age: [1728000]
     Access-Control-Allow-Credentials: [true]
     Access-Control-Expose-Headers: ['Docker-Content-Digest']
+
+{% if docker_registry_proxy_enabled %}
+proxy:
+  remoteurl: https://registry-1.docker.io
+  username: {{ docker_hub_username }}
+  password: {{ docker_hub_password }}
+{% else %}
+auth:
+  htpasswd:
+    realm: basic-realm
+    path: /auth/htpasswd
+{% endif %}
