--- a/roles/home.diun_file/files/diun.j2
+++ b/roles/home.diun_file/files/diun.j2
@@ -1,2 +1,5 @@
 # Watch latest tag of an image on docker.io (DockerHub)
 - name: {{ diun_watch_image }}
+{% if diun_registry_name %}
+  regopt: {{ diun_registry_name }}
+{%endif %}
